# plantuml-sequence-parser

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
config/grammar/: grammar_v0.3.ebnf  plantuml_grammar.ebnf
input/: simple.plantuml
plantuml-sequence-parser/: plantuml-parser.py
plantuml-sequence-parser/helpers/: dict_helper.py
plantuml_grammar_parser/: actor_pivot_producer.py  sequenceparser.py  sequenceparser_console.py
plantuml_grammar_parser/config/: diagram_setup.yaml  plantuml_grammar.ebnf
plantuml_grammar_parser/helpers/: dict_helper.py  lark_helper.py  output_producer.py  ref_files_helper.py  tree_crawler.py
src/: PlantUmlTreeTransformer.py  output_producer.py  plantuml-parser.py  tree_crawler.py
src/sequenceparser/: actor_pivot_producer.py  sequenceparser_cli.py  sequenceparser_core.py
src/sequenceparser/config/: diagram_setup.yaml  plantuml_grammar.ebnf
src/sequenceparser/helpers/: dict_helper.py  lark_helper.py  ref_files_helper.py
src/sequenceparser/transformers/: PlantUmlTreeTransformer.py
