[metadata]
name=plantuml_grammar_parser
version=0.0.2
license=MIT
author=andrey isachkov
author_email=isachkov@netcracker.com

long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options.package_data]
* = *.ebnf, *.yaml